# sparsetir-artifact

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  download_data.sh  environment.yml  plot.py  requirements.txt  run-all.sh
bsrmm/: csr_sddmm.py  csr_spmm.py  run_cusparse.sh  sparse_tir.py  sparse_tir_sddmm.py  sparse_tir_spmm.py  triton_blocksparse_sddmm.py  triton_blocksparse_spmm.py  utils.py
bsrmm/src/: CMakeLists.txt  bench_ell.cu  bsr_spmm.h  cnpy  cuda_common.h
e2e/: extract_data.py  plot.py  run.sh  sage-sparse-tir.py  sage_dgl.py  sage_dgl_reddit.py  sage_sparse_tir.py  utils.py
install/: install_cmake_source.sh  install_conda.sh  install_dgl.sh  install_pyg.sh  install_python.sh  install_pytorch.sh  ubuntu2004_install_llvm.sh  ubuntu_install_core.sh  ubuntu_install_python_package.sh
pruned-bert/: .gitignore  extract_data.py  structured-transposed-single-op.py  unstructured-transposed-single-op.py  unstructured.plt
prunned-bert/: baseline.py  download_model.py  run.sh  run_sputnik.sh  single-op.py  sparse_bert.py  structured-transposed-single-op.py  structured.plt  unstructured-transposed-single-op.py  unstructured.plt
python/: setup.py
rgcn/: RGCN.py  RGCN_DGL.py  RGCN_PyG.py  RGCN_sparse_tir.py  dataset  dgl_baseline.py  download_data.py  extract_data.py  plot.py  run.sh
sddmm/: bench_dgl.py  bench_sddmm.py  data  dgsparse  dump_npz.py  extract_data.py  plot.py  run.sh  run_dgsparse_sddmm.sh  run_sparse_tir.sh  run_sputnik.sh  sparse_tir_lowered_iter_scripts.py  triton_blocksparse_sddmm.py  utils.py
sparse-attention/: .gitignore  csr_sddmm.py  csr_spmm.py  dump_bsr.py  extract_data.py  plot.py  run.sh  sparse_tir_sddmm.py  sparse_tir_spmm.py  triton_blocksparse_sddmm.py  triton_blocksparse_spmm.py  utils.py
sparse-conv/: .gitignore  benchmark.py  download_data.sh  extract_data.py  rgcn.py  run.sh  sparseconv.plt
spmm/: .gitignore  dataset  (+15 more)
spmm/dgsparse/: .gitignore  CMakeLists.txt  cnpy
spmm/dgsparse/example/ge-spmm/: CMakeLists.txt  spmm.cu.cc
spmm/dgsparse/example/sddmm/: CMakeLists.txt  sddmm.cu.cc
spmm/dgsparse/src/ge-spmm/: Makefile
spmm/dgsparse/src/sddmm/: Makefile
(+6 files in other folders)
